awsResources/netracker-cfn.yml
AWSTemplateFormatVersion: "2010-09-09"
Description: 'NE Tracker automation script'

Metadata:
  AWS::CloudFormation::Interface: 
    ParameterGroups:
      - 
        Label: 
          default: "Certificate Arn"
        Parameters:
          - AcmCertificate

Parameters:
  Vpc: 
    Type: String
    Default: vpc-a2cc32c9
  Subnet1:
    Type: String
    Default: subnet-2df0a561
  Subnet2:
    Type: String
    Default: subnet-8c41def7

  Ec2InstanceType:
    Type: String
    Default: t3.micro
  Ec2ImageId:
    Type: String
    Default: ami-0d936246ca02ed6ca
  Ec2SshKey:
    Type: String
    Default: firstEC2

  AcmCertificate:
    Description: The ARN of the AWS Certification Manager's certificate
    Type: String
    Default: arn:aws:acm:ap-south-1:904346070938:certificate/02a9d562-e60b-4599-a2bc-b1e7ff9c0041

Resources:

  AlbSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Load Balancer Security Group
      VpcId:
        Ref: Vpc
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 80
        ToPort: 80
        CidrIp: 0.0.0.0/0
        Description: Allow public HTTP
      - IpProtocol: tcp
        FromPort: 443
        ToPort: 443
        CidrIp: 0.0.0.0/0
        Description: Allow public HTTP
      
  Ec2SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Load Balancer Security Group
      VpcId:
        Ref: Vpc
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 22
        ToPort: 22
        CidrIp: 0.0.0.0/0
        Description: Allow public SSH
      - IpProtocol: tcp
        FromPort: 8080
        ToPort: 8080
        SourceSecurityGroupId:
          Ref: AlbSecurityGroup
        Description: Allow HTTP from ALB
      - IpProtocol: tcp
        FromPort: 8443
        ToPort: 8443
        SourceSecurityGroupId:
          Ref: AlbSecurityGroup
        Description: Allow HTTPS from ALB

  TargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      HealthCheckEnabled: true
      TargetType: instance
      Port: 8443
      Protocol: HTTPS
      HealthCheckPath: /ne-tracker/index.jsp
      VpcId:
        Ref: Vpc

  LaunchTemplate:
    Type: AWS::EC2::LaunchTemplate
    Properties:
      LaunchTemplateData:
        InstanceType: !Ref Ec2InstanceType
        KeyName: !Ref Ec2SshKey
        ImageId: !Ref Ec2ImageId
        SecurityGroupIds:
          - Ref: Ec2SecurityGroup
        BlockDeviceMappings: 
          - Ebs:
              VolumeSize: 10
              VolumeType: gp2
              DeleteOnTermination: true
              Encrypted: true
            DeviceName: /dev/xvda
        UserData:
          Fn::Base64: !Sub |
            #!/bin/bash
            # Install all pending updates to the system
            # cd /home/ubuntu/server/apache-tomcat-9.0.41/webapps/ne-tracker/WEB-INF/classes
            sudo su
            # wget https://propertiesfiel.s3.ap-south-1.amazonaws.com/dispatch.properties
            cd /home/ubuntu/server/apache-tomcat-9.0.41/webapps
            wget "https://github.com/dilan-premarathna/ne-tracker/raw/2.x/target/ne-tracker.war"
            
  AutoScalingGrp:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      HealthCheckType: EC2
      HealthCheckGracePeriod: 300
      LaunchTemplate:
        LaunchTemplateId: !Ref LaunchTemplate
        Version: !GetAtt LaunchTemplate.LatestVersionNumber
      DesiredCapacity: 1
      MaxSize: 1
      MinSize: 1
      VPCZoneIdentifier:
        - Ref: Subnet1
        - Ref: Subnet2
      TargetGroupARNs:
        - Ref: TargetGroup

  Alb:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Scheme: internet-facing
      Type: application
      Subnets:
        - Ref: Subnet1
        - Ref: Subnet2
      SecurityGroups:
      - Ref: AlbSecurityGroup

  HttpListner:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      LoadBalancerArn:
        Ref: Alb
      Port: 80
      Protocol: HTTP
      DefaultActions:
      - Type: forward
        TargetGroupArn:
          Ref: TargetGroup

  HttpsListner:
    Type : AWS::ElasticLoadBalancingV2::Listener
    Properties:
      Certificates:
        - CertificateArn: !Ref AcmCertificate
      DefaultActions:
      - Type: forward
        TargetGroupArn:
          Ref: TargetGroup
      LoadBalancerArn:
        Ref: Alb
      Port: 443
      Protocol: HTTPS
